# djl-iree-engine

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: dependency-submission.yml  native-build-job.yml  native-build.yml  publish.yml
buildSrc/src/main/kotlin/: IreeDataTypeCodegen.kt
docs/: 2026-07-20-iree-runtime-dist-usability-report.md
docs/superpowers/plans/: 2026-07-19-djl-iree-engine-skeleton.md  2026-07-20-migrate-to-iree-runtime-dist.md  2026-07-22-local-task-support.md
docs/superpowers/specs/: 2026-07-19-djl-iree-engine-findings.md  2026-07-19-djl-iree-engine-skeleton-design.md  2026-07-22-local-task-support-design.md  iree-runtime-dist-wishlist.md
example/: README.md  build.gradle.kts
example/src/jmh/java/org/measly/example/: MobilenetBenchmark.java
example/src/main/java/org/measly/example/: CloseableImageTranslator.java  MobilenetExample.java  ModelArtifacts.java  PlainJavaMobilenetTranslator.java
example/src/test/java/org/measly/example/: ModelArtifactsTest.java  PlainJavaMobilenetTranslatorTest.java
gradle/: iree-type-mappings.json  libs.versions.toml
native/: CMakeLists.txt  build.sh  build_qa.sh  local_build_wrapper.sh  tsan_gate.sh
native/cmake/: IreeRuntimePin.cmake  ResolveIree.cmake
native/core/: iree_handles.h  iree_runtime.cpp  iree_runtime.h  iree_status.h
native/harness/: iree_leak_harness.cpp
native/jni/: iree_djl_jni.cpp
native/test/: iree_runtime_test.cpp  link_smoke_test.cpp
src/main/java/org/measly/iree/engine/: IreeDataTypes.java  IreeEngine.java  IreeEngineProvider.java  IreeModel.java  IreeNDArray.java  IreeNDManager.java  IreeSymbolBlock.java  LibUtils.java
src/main/java/org/measly/iree/jni/: IreeNative.java  IreeTensor.java
src/test/java/org/measly/iree/: AddModelIT.java  LeakStressTest.java
src/test/java/org/measly/iree/jni/: IreeNativeTest.java
src/test/resources/models/: add.vmfb
tools/: add.mlir  export_add.sh
tools/scripts/: export_mobilenet.py
